--- a/dem-service/src/main/resources/application.properties
+++ b/dem-service/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+spring.jpa.defer-datasource-initialization=true
+
 spring.sql.init.mode=always
+
+spring.sql.init.continue-on-error=true
+
 spring.datasource.url=jdbc:postgresql://postgres-dem:5432/demdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
