--- a/mdm-service/Dockerfile
+++ b/mdm-service/Dockerfile
@@ -1,5 +1,6 @@
-FROM eclipse-temurin:21-jdk
+FROM eclipse-temurin:21-jdk-jammy
 VOLUME /tmp
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
+ARG DEPENDENCY=target/dependency
+
+COPY target/mdm-service-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
