--- a/mdm-service/src/main/resources/application.properties
+++ b/mdm-service/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.cloud.compatibility-verifier.enabled=false
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+dem.service.url=http://dem-service:8080
+
 spring.datasource.url=jdbc:postgresql://postgres-mdm:5432/mdmdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
